--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -53,7 +53,7 @@
       </div>
 
       <div class="mt-3">
-        <button class=" logoGreenMedium" (click)="openMoneyModal()">Account verwalten</button>
+        <button class=" logoGreenMedium" (click)="openAccountModal()">Account verwalten</button>
       </div>
 
 
