--- a/src/app/components/main-page/suchleiste/suchleiste.component.html
+++ b/src/app/components/main-page/suchleiste/suchleiste.component.html
@@ -6,20 +6,20 @@
         <div class="form-row form-row-style form-control-lg">
           <span class="input-group-text input-opaque" ><img class="iconsize" src="../../../../assets/img/Icons/von_icon.png"/> </span>
           <div class="col-2 colpad">
-            <input type="text" class="form-control text-opaque form-control-lg" placeholder="Von...">
+            <input type="text" class="form-control text-opaque form-control-lg" placeholder="Von..." name="startCity" [(ngModel)]="startCity">
           </div>
           <span class="input-group-text input-opaque" ><img class="iconsize" src="../../../../assets/img/Icons/nach_icon.png"/> </span>
           <div class="col-2 colpad">
-            <input type="text" class="form-control text-opaque form-control-lg" placeholder="Nach...">
+            <input type="text" class="form-control text-opaque form-control-lg" placeholder="Nach..." name="endCity" [(ngModel)]="endCity">
           </div>
           <span class="input-group-text input-opaque" ><img class="iconsize" src="../../../../assets/img/Icons/kalender_icon.png"/> </span>
           <div class="col-2 colpad">
-            <input type="date" class="form-control text-opaque form-control-lg" placeholder="Datum">
+            <input type="date" class="form-control text-opaque form-control-lg" placeholder="Datum" name="date" [(ngModel)]="date">
           </div>
           <span class="input-group-text input-opaque" ><img class="iconsize" src="../../../../assets/img/Icons/mitfahrer_icon_white.png"/> </span>
           <div class="col colpad">
             <!--<input type="number" class="form-control text-opaque" placeholder="Mitfahrer">-->
-            <select name="" id="mitfahrer" class="form-control text-opaque form-control-lg">
+            <select class="form-control text-opaque form-control-lg" name="passengers" [(ngModel)]="passengers">
               <option value="1" style="color: black">1</option>
               <option value="2" style="color: black">2</option>
               <option value="3" style="color: black">3</option>
@@ -33,7 +33,7 @@
           <span class="input-group-text input-opaque" ><img class="iconsize" src="../../../../assets/img/Icons/koffer_icon_white.png"/> </span>
           <div class="col colpad">
             <!--<input type="number" class="form-control text-opaque" placeholder="Gepäck">-->
-            <select name="" id="koffer" class="form-control text-opaque form-control-lg">
+            <select class="form-control text-opaque form-control-lg" name="storage" [(ngModel)]="storage">
               <option value="1" style="color: black">1</option>
               <option value="2" style="color: black">2</option>
               <option value="3" style="color: black">3</option>
@@ -45,30 +45,34 @@
             </select>
           </div>
           <div class="col colpad">
-            <button type="button" class="btn  btn-block suchbutton" placeholder="Gepäck"><span class="h6">Suchen</span></button>
+            <button type="button" class="btn  btn-block suchbutton" placeholder="" (click)="searchButton()"><span class="h6">Suchen</span></button>
           </div>
         </div>
       </form>
+
+
+
+
       <form class="smallscreen">
         <div class="col form-row-style">
           <div class="row row-margin">
             <span class="input-group-text input-opaque" ><img class="iconsize" src="../../../../assets/img/Icons/von_icon.png"/> </span>
             <div class="col colpad">
-              <input type="text" class="form-control text-opaque form-control-lg" placeholder="Von...">
+              <input type="text" class="form-control text-opaque form-control-lg" placeholder="Von..." name="startCity" [(ngModel)]="startCity">
             </div>
           </div>
           <div class="border-bottom"></div>
           <div class="row row-margin">
             <span class="input-group-text input-opaque" ><img class="iconsize" src="../../../../assets/img/Icons/nach_icon.png"/> </span>
             <div class="col colpad">
-              <input type="text" class="form-control text-opaque form-control-lg" placeholder="Nach...">
+              <input type="text" class="form-control text-opaque form-control-lg" placeholder="Nach..." name="endCity" [(ngModel)]="endCity">
             </div>
           </div>
           <div class="border-bottom"></div>
           <div class="row row-margin">
             <span class="input-group-text input-opaque" ><img class="iconsize" src="../../../../assets/img/Icons/kalender_icon.png"/> </span>
             <div class="col colpad">
-              <input type="date" class="form-control text-opaque form-control-lg" placeholder="Datum">
+              <input type="date" class="form-control text-opaque form-control-lg" placeholder="Datum" name="date" [(ngModel)]="date">
             </div>
           </div>
           <div class="border-bottom"></div>
@@ -76,7 +80,7 @@
           <span class="input-group-text input-opaque" ><img class="iconsize" src="../../../../assets/img/Icons/mitfahrer_icon_white.png"/> </span>
           <div class="col colpad">
             <!--<input type="number" class="form-control text-opaque" placeholder="Mitfahrer">-->
-            <select name="" id="mitfahre" class="form-control text-opaque form-control-lg"> //MITFAHRER ID PROBLEM
+            <select class="form-control text-opaque form-control-lg" name="passengers" [(ngModel)]="passengers">
               <option value="1" style="color: black">1</option>
               <option value="2" style="color: black">2</option>
               <option value="3" style="color: black">3</option>
@@ -90,7 +94,7 @@
           <span class="input-group-text input-opaque" ><img class="iconsize" src="../../../../assets/img/Icons/koffer_icon_white.png"/> </span>
           <div class="col colpad">
             <!--<input type="number" class="form-control text-opaque" placeholder="Gepäck">-->
-            <select name="" id="koffer2" class="form-control text-opaque form-control-lg"> //KOFFER ID PROBLEM
+            <select class="form-control text-opaque form-control-lg" name="storage" [(ngModel)]="storage">
               <option value="1" style="color: black">1</option>
               <option value="2" style="color: black">2</option>
               <option value="3" style="color: black">3</option>
@@ -103,7 +107,7 @@
           </div>
           </div>
           <div class="col colpad">
-            <button type="button" class="btn  btn-block suchbutton" placeholder="Gepäck"><span class="h5">Suchen</span></button>
+            <button type="button" class="btn  btn-block suchbutton" (click)="searchButton()"><span class="h5">Suchen</span></button>
           </div>
         </div>
       </form>
