--- a/src/app/components/edit-account/edit-account.component.html
+++ b/src/app/components/edit-account/edit-account.component.html
@@ -1,4 +1,5 @@
 <!--  Modal Header -->
+<div class="container">
 <div class="modal-header border-0">
   <div class="container">
     <div class="row">
@@ -83,4 +84,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
