red button hinfügen

--- a/src/app/components/edit-account/edit-account.component.html
+++ b/src/app/components/edit-account/edit-account.component.html
@@ -9,9 +9,10 @@
       </div>
       <div class="col-2"></div>
       <div class="col-1 p-0">
-        <button type="button" class="close logoGreenDark" aria-label="Close" style="position: absolute"
+        <button type="button" class="close logoGreenDark" aria-label="Close"
+                style="position: absolute; padding-top: 5px; padding-right: 20px"
                 (click)="activeModal.dismiss()">
-          <span aria-hidden="true">&times;</span>
+          <span class="btn btn-primary btn-danger justify-content-center" aria-hidden="true">&times;</span>
         </button>
       </div>
 
