seats or storage can be 0 now when creating a tour

--- a/src/app/components/create-tours/create-tours.component.html
+++ b/src/app/components/create-tours/create-tours.component.html
@@ -85,6 +85,7 @@
           <label for="seats" class="logoGreenDark">Sitzplätze</label>
           <select name="" id="seats" class="form-control" [(ngModel)]="seats">
             <option value=""></option>
+            <option value="0">0</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -101,6 +102,7 @@
           <label for="storage" class="logoGreenDark">Stauraum</label>
           <select name="" id="storage" class="form-control" [(ngModel)]="storage">
             <option value=""></option>
+            <option value="0">0</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
