--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -25,7 +25,7 @@
         {{this.userData.currUser.money}}€
       </div>
 
-      <div class="mt-3">
+      <div class="">
         <app-vote-stars [currentRate]="this.userData.currUser.evaluation"></app-vote-stars>
       </div>
 
