--- a/src/app/components/tour-details/tour-details.component.html
+++ b/src/app/components/tour-details/tour-details.component.html
@@ -117,7 +117,7 @@
 
   <div class="row justify-content-center">
     <div class="col-5 m-4">
-      <button class="btn btn-success btn-block">Buchen</button>
+      <button class="btn btn-success btn-block" (click)="openTourBook()">Buchen</button>
     </div>
   </div>
 </div>
