protoytpe list, Not Finished!

--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -69,7 +69,7 @@
     <div class="" style="height: 40vh">
       <h3 class="h3 font-weight-bold logoGreenDark ml-3">Du fährst</h3>
       <div>
-        <app-tour-list [isHorizontal]="isHorizontal" [usedList]="ownOffers"></app-tour-list>
+        <app-profile-tour-list [usedList]="ownOffers"></app-profile-tour-list>
         <div class="container">
           <div class="row">
 
@@ -90,7 +90,7 @@
     <div class="" style="height: 40vh">
       <h3 class="h3 font-weight-bold logoGreenDark ml-3">Du wirst mitgenommen</h3>
       <div>
-        <app-tour-list [isHorizontal]="isHorizontal" [usedList]="passengerTours"></app-tour-list>
+        <app-profile-tour-list [usedList]="passengerTours"></app-profile-tour-list>
         <div class="container">
           <div class="row">
 
