changing the search input in the /tours page now works

--- a/src/app/components/tour-site/tour-site.component.html
+++ b/src/app/components/tour-site/tour-site.component.html
@@ -1,4 +1,4 @@
-<app-suchleiste></app-suchleiste>
+<app-suchleiste (newSearchEvent)="resetSearch()"></app-suchleiste>
 
 <app-slide-checker (changeState)="offerOnOff()"></app-slide-checker>
 
