KMSWS21T04-118 Create component 'edit account' (#44)
* initial commit

* button erstellen

* component erstellen

* neu component erstellen

* neu component erstellen

* Email und Password input erstellen

* speichern und abbrechen button erstellen

* container hinfügen

* red button hinfügen

* added logic to update email and password

Co-authored-by: Loic Maxwell Ngouabe <loic.maxwell.tchiabe.ngouabe@mni.thm.de>
Co-authored-by: TheSoniix <70700254+TheSoniix@users.noreply.github.com>

--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -53,6 +53,11 @@
       </div>
 
       <div class="mt-3">
+        <button class=" logoGreenMedium" (click)="openAccountModal()">Account verwalten</button>
+      </div>
+
+
+      <div class="mt-3">
         <button class=" logoGreenMedium" (click)="logout()">Abmelden</button>
       </div>
 
