KMSWS21T04-81 - Rework mainpage (#34)
* initial commit

* Reworked infobox, started with suchleiste

* Reworked Suchleiste, added alternative HTML and CSS for smaller screens

* changed width at which navbar and searchbar change appearance

* added routing to tours page and logic for it.

* changing the search input in the /tours page now works

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,8 +1,10 @@
 <app-suchleiste></app-suchleiste>
-<div class="container">
-  <div class="row">
-    <div class="col-4" *ngFor="let title of boxTitles; let i = index">
+<div class="container d-flex justify-content-center">
+  <div class="row align-self-center">
+    <div class="col" *ngFor="let title of boxTitles; let i = index">
       <app-infobox [boxTitle]="boxTitles[i]" [infoText]="infoTexts[i]" [imagePath]="imagePaths[i]"></app-infobox>
     </div>
   </div>
 </div>
+
+
