little fix in createTours, finished table in prfoile, design still not perfect

--- a/src/app/components/create-tours/create-tours.component.html
+++ b/src/app/components/create-tours/create-tours.component.html
@@ -3,8 +3,8 @@
   <div class="container title-background mw-100">
     <div class="row ">
       <div class="col text-center">
-        <div class="h2 logoGreenDark m-3" *ngIf="this.isOffer">Erstelle eine Angebot</div>
-        <div class="h2 logoGreenDark m-3" *ngIf="!this.isOffer">Erstelle ein Anfrage</div>
+        <div class="h2 logoGreenDark m-3" *ngIf="this.isOffer">Erstelle ein Angebot</div>
+        <div class="h2 logoGreenDark m-3" *ngIf="!this.isOffer">Erstelle eine Anfrage</div>
       </div>
     </div>
     <app-slide-checker (changeState)="offerOnOff()"></app-slide-checker>
