--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -66,10 +66,10 @@
   <div class="flex column">
 
     <!--        1. Item       -->
-    <div class="" style="height: 40vh">
+    <div class="mt-3" style="height: 40vh; overflow: scroll; overflow-x: hidden">
       <h3 class="h3 font-weight-bold logoGreenDark ml-3">Du fährst</h3>
       <div>
-        <app-profile-tour-list [usedList]="ownOffers"></app-profile-tour-list>
+        <app-profile-tour-list *ngIf="ownOffers.length > 0" [usedList]="ownOffers"></app-profile-tour-list>
         <div class="container">
           <div class="row">
 
@@ -87,10 +87,10 @@
 
 
     <!--        2. Item       -->
-    <div class="" style="height: 40vh">
+    <div class="mt-3" style="height: 40vh; overflow: scroll; overflow-x: hidden">
       <h3 class="h3 font-weight-bold logoGreenDark ml-3">Du wirst mitgenommen</h3>
       <div>
-        <app-profile-tour-list [usedList]="passengerTours"></app-profile-tour-list>
+        <app-profile-tour-list *ngIf="passengerTours.length > 0" [usedList]="passengerTours"></app-profile-tour-list>
         <div class="container">
           <div class="row">
 
