--- a/src/app/components/profil/loggedin/profile-tour-list/profile-tour-list.component.html
+++ b/src/app/components/profil/loggedin/profile-tour-list/profile-tour-list.component.html
@@ -1,26 +1,34 @@
-<table class="table table-striped p-4">
-  <thead class="thead-light">
-  <tr>
-    <th>Von</th>
-    <th>Nach</th>
-    <th>Wann?</th>
-    <th>Um?</th>
-    <th>Dauer</th>
-    <th>Stauraum</th>
-    <th>Sitze</th>
-    <th>Preis</th>
-  </tr>
+<table class="table p-4" *ngIf="userService.currUser">
+  <thead class="thead-cargo">
+    <tr>
+      <th>Von</th>
+      <th>Nach</th>
+      <th>Wann?</th>
+      <th>Um?</th>
+      <th>Dauer</th>
+      <th>Stauraum</th>
+      <th>Sitze</th>
+      <th>Preis</th>
+      <th></th>
+    </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let entry of usedList">
-    <td>{{entry.startCity}}</td>
-    <td>{{entry.endCity}}</td>
-    <td>{{entry.date}}</td>
-    <td>{{entry.startTime}}</td>
-    <td>{{entry.duration}}h</td>
-    <td>{{entry.storage}}</td>
-    <td>{{entry.seats}}</td>
-    <td>{{entry.price}}</td>
+  <tr *ngFor="let tour of usedList">
+    <td>{{tour.startCity}}</td>
+    <td>{{tour.endCity}}</td>
+    <td>{{tour.date}}</td>
+    <td>{{tour.startTime}}</td>
+    <td>{{tour.duration}}h</td>
+    <td>{{tour.storage}}</td>
+    <td>{{tour.seats}}</td>
+    <td>{{tour.price}}</td>
+    <td>
+      <button class="btn btn-outline-dark btn-sm mr-4" (click)="navigateToDetailsOrEdit(tour)">
+        <a *ngIf="userService.currUser.uid === tour.creatorID">Bearbeiten</a>
+        <a *ngIf="userService.currUser.uid !== tour.creatorID">Details</a>
+      </button>
+
+    </td>
   </tr>
   </tbody>
 </table>
