--- a/src/app/components/tour-details/tour-details.component.html
+++ b/src/app/components/tour-details/tour-details.component.html
@@ -117,7 +117,17 @@
 
   <div class="row justify-content-center">
     <div class="col-5 m-4">
-      <button class="btn btn-success btn-block" (click)="openTourBook()">Buchen</button>
+      <button class="btn btn-success btn-block"
+              (click)="openTourBook()"
+              [disabled]="this.bookedUp() || this.alreadyPassenger() || this.alreadyDriver()">
+        Buchen
+      </button>
+    </div>
+  </div>
+
+  <div *ngIf="this.alreadyPassenger() || this.alreadyDriver()" class="row justify-content-center">
+    <div class="col-5 m-4">
+      <button class="btn btn-danger btn-block" (click)="cancelTour()">Stornieren</button>
     </div>
   </div>
 </div>
